layout bug fixing
bug fiing

--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -90,11 +90,12 @@ h1{
 }
 
 .reccHeader{
-  min-width: 100%;
+  text-align: center;
   padding-top: 5px;
   background-color: #A33633;
   color: #ffffff;
 }
+
 .reccs{
   background-color: #A33633;
   color: #ffffff;
